# cnu_crawler

./: README.md  __init__.py  pyproject.toml  requirements.txt  scheduler.py  utils.py
cnu_crawler/: pipeline.py
cnu_crawler/scraper/: base.py  generic.py
cnu_crawler/search/: index_links.py  query_links.py
core/: __init__.py  browser.py  fetcher.py  parser.py
data/: links.txt
spiders/: __init__.py  colleges.py  departments.py  notices.py
src/: __init__.py  config.py  pipeline.py  utils.py
src/cnu_crawler/: __init__.py  config.py  scheduler.py  utils.py  view_notices.py
src/cnu_crawler/core/: browser.py  fetcher.py
src/cnu_crawler/spiders/: __init__.py  colleges.py  departments.py  manual_linker.py  notices.py
src/cnu_crawler/storage/: csv_sink.py  models.py
src/scraper/: generic.py
src/search/: index_links.py  indexer.py  query.py  query_links.py
storage/: __init__.py  csv_sink.py  models.py
